--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
       html {
         font-family: sans-serif;
       }
+
       body {
         width: 50%;
         max-width: 800px;
         min-width: 480px;
         margin: 0 auto;
       }
+
       .lastResult {
         color: white;
         padding: 3px;
@@ -27,48 +29,44 @@
 
       <p>Hemos seleccionado un número aleatorío entre 1 a 100. Trata de adivinar el número, en un total de 10 turnos o menos. No te preocupes, te diremos sí el número es más alto o más bajo </p>
 
-<div class="form">
-  <label for="guessField">Ingresa el número a adivinar: </label><input type="text" id="guessField" class="guessField">
-  <input type="submit" value="Ingresar el número aleatorio" class="guessSubmit">
-</div>
+   <div class="form">
+      <label for="guessField">Ingresa el numero a adivinar: </label><input type="text" id="guessField" class="guessField">
+      <input type="submit" value="Submit guess" class="guessSubmit">
+    </div>
 
-<div class="resultParas">
-  <p class="guesses"></p>
-  <p class="lastResult"></p>
-  <p class="lowOrHi"></p>
-</div>
+ <div class="resultParas">
+      <p class="guesses"></p>
+      <p class="lastResult"></p>
+      <p class="lowOrHi"></p>
+    </div>
 
-</body>
+    <script>
+      let randomNumber = Math.floor(Math.random() * 100) + 1;
 
-<script>
-  let randomNumber = Math.random() * 10;
+      const guesses = document.querySelector('.guesses');
+      const lastResult = document.querySelector('.lastResult');
+      const lowOrHi = document.querySelector('.lowOrHi');
+      const guessSubmit = document.querySelector('.guessSubmit');
+      const guessField = document.querySelector('.guessField');
+      let guessCount = 1;
+      let resetButton;
 
-  const ATTEMPS = 5;
-  const guesses = document.querySelector('.guesses');
-  const lastResult = document.querySelector('.lastResult');
-  const lowOrHi = document.querySelector('lowOrHi');
-  const guessSubmit = document.querySelector('.guessSubmit');
-  const guessField = document.querySelector('.guessField');
+      function checkGuess() {
+        let userGuess = Number(guessField.value);
+        if (guessCount === 1) {
+          guesses.textContent = 'Número aleatorio anterior: ';
+        }
 
-  let guessCount = 1;
-  let resetButton;
+        guesses.textContent += userGuess + ' ';
 
-  function checkGuess() {
-
-    let userGuess = guessField.value;
-    if(guessCount === 1) {
-      guesses.textContent = 'Número aleatorio anterior: ';
-    }
-    guesses.textContent += userGuess + ' ';
-
-    if(userGuess === randomNumber) {
+ if (userGuess === randomNumber) {
       lastResult.textContent = '!!!Pérdistes!!!';
       lastResult.style.backgroundColor = 'black';
       lowOrHi.textContent = '';
       setGameOver();
-    } else if(guessCount === ATTEMPS) {
+    } else if (guessCount === 10) {
       lastResult.textContent = 'Felicitaciones! adivinaste el número!';
-      lastResult.style.backgroundColor = 'red';
+      lowOrHi.textContent = '';
       setGameOver();
     } else {
       lastResult.textContent = 'Incorrecto! ';
@@ -76,7 +74,6 @@
       if(userGuess < randomNumber) {
         lowOrHi.textContent = 'El número es mayor!';
       } else if(userGuess > randomNumber) {
-        lowOrHi.textContent = 'El número es menor!';
       }
     }
 
@@ -84,7 +81,8 @@
     guessField.value = '';
     guessField.focus();
   }
-  guessSubmit.addeventListener('click', checkGuess);
+
+  guessSubmit.addEventListener('click', checkGuess);
 
   function setGameOver() {
 	  guessField.disabled = true;
@@ -92,26 +90,25 @@
 	  resetButton = document.createElement('button');
 	  resetButton.textContent = 'Comienza un nuevo juego';
 	  document.body.appendChild(resetButton);
-	  resetButton.addeventListener('click', resetGame);
+	  resetButton.addEventListener('click', resetGame);
   }
 
   function resetGame() {
 	  guessCount = 1;
 
 	  const resetParas = document.querySelectorAll('.resultParas p');
-	  for(let i = 0; i < resetParas.length; i++) {
+	  for(let i = 0 ; i < resetParas.length; i++) {
 		  resetParas[i].textContent = '';
 	  }
-	  resetButton.parentNode.removeChild(resetButton);
 
+	  resetButton.parentNode.removeChild(resetButton);
 	  guessField.disabled = false;
 	  guessSubmit.disabled = false;
 	  guessField.value = '';
 	  guessField.focus();
-
 	  lastResult.style.backgroundColor = 'white';
-
-	  randomNumber = Math.floor(Math.random()) + 1;
-  }
-</script>
+	  randomNumber = Math.floor(Math.random() * 100) + 1;
+     }
+    </script>
+  </body>
 </html>
